testdata/baselines/reference/submodule/compiler/letDeclarations-scopes-duplicates.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
letDeclarations-scopes-duplicates.ts(2,5): error TS2451: Cannot redeclare block-scoped variable 'var1'.
letDeclarations-scopes-duplicates.ts(2,5): error TS2451: Cannot redeclare block-scoped variable 'var1'.
letDeclarations-scopes-duplicates.ts(3,5): error TS2451: Cannot redeclare block-scoped variable 'var1'.
letDeclarations-scopes-duplicates.ts(3,5): error TS2451: Cannot redeclare block-scoped variable 'var1'.
letDeclarations-scopes-duplicates.ts(5,5): error TS2451: Cannot redeclare block-scoped variable 'var2'.
letDeclarations-scopes-duplicates.ts(5,5): error TS2451: Cannot redeclare block-scoped variable 'var2'.
letDeclarations-scopes-duplicates.ts(6,7): error TS2451: Cannot redeclare block-scoped variable 'var2'.
letDeclarations-scopes-duplicates.ts(6,7): error TS2451: Cannot redeclare block-scoped variable 'var2'.
letDeclarations-scopes-duplicates.ts(8,7): error TS2451: Cannot redeclare block-scoped variable 'var3'.
letDeclarations-scopes-duplicates.ts(8,7): error TS2451: Cannot redeclare block-scoped variable 'var3'.
letDeclarations-scopes-duplicates.ts(9,5): error TS2451: Cannot redeclare block-scoped variable 'var3'.
letDeclarations-scopes-duplicates.ts(9,5): error TS2451: Cannot redeclare block-scoped variable 'var3'.
letDeclarations-scopes-duplicates.ts(11,7): error TS2451: Cannot redeclare block-scoped variable 'var4'.
letDeclarations-scopes-duplicates.ts(11,7): error TS2451: Cannot redeclare block-scoped variable 'var4'.
letDeclarations-scopes-duplicates.ts(12,7): error TS2451: Cannot redeclare block-scoped variable 'var4'.
letDeclarations-scopes-duplicates.ts(12,7): error TS2451: Cannot redeclare block-scoped variable 'var4'.
letDeclarations-scopes-duplicates.ts(14,5): error TS2300: Duplicate identifier 'var5'.
letDeclarations-scopes-duplicates.ts(14,5): error TS2300: Duplicate identifier 'var5'.
letDeclarations-scopes-duplicates.ts(15,5): error TS2300: Duplicate identifier 'var5'.
letDeclarations-scopes-duplicates.ts(15,5): error TS2300: Duplicate identifier 'var5'.
letDeclarations-scopes-duplicates.ts(17,5): error TS2451: Cannot redeclare block-scoped variable 'var6'.
letDeclarations-scopes-duplicates.ts(17,5): error TS2451: Cannot redeclare block-scoped variable 'var6'.
letDeclarations-scopes-duplicates.ts(18,5): error TS2451: Cannot redeclare block-scoped variable 'var6'.
letDeclarations-scopes-duplicates.ts(18,5): error TS2451: Cannot redeclare block-scoped variable 'var6'.
letDeclarations-scopes-duplicates.ts(21,9): error TS2451: Cannot redeclare block-scoped variable 'var7'.
letDeclarations-scopes-duplicates.ts(21,9): error TS2451: Cannot redeclare block-scoped variable 'var7'.
letDeclarations-scopes-duplicates.ts(22,9): error TS2451: Cannot redeclare block-scoped variable 'var7'.
letDeclarations-scopes-duplicates.ts(22,9): error TS2451: Cannot redeclare block-scoped variable 'var7'.
letDeclarations-scopes-duplicates.ts(24,13): error TS2451: Cannot redeclare block-scoped variable 'var8'.
letDeclarations-scopes-duplicates.ts(24,13): error TS2451: Cannot redeclare block-scoped variable 'var8'.
letDeclarations-scopes-duplicates.ts(25,15): error TS2451: Cannot redeclare block-scoped variable 'var8'.
letDeclarations-scopes-duplicates.ts(25,15): error TS2451: Cannot redeclare block-scoped variable 'var8'.
letDeclarations-scopes-duplicates.ts(31,13): error TS2451: Cannot redeclare block-scoped variable 'var9'.
letDeclarations-scopes-duplicates.ts(31,13): error TS2451: Cannot redeclare block-scoped variable 'var9'.
letDeclarations-scopes-duplicates.ts(32,13): error TS2451: Cannot redeclare block-scoped variable 'var9'.
letDeclarations-scopes-duplicates.ts(32,13): error TS2451: Cannot redeclare block-scoped variable 'var9'.
letDeclarations-scopes-duplicates.ts(36,11): error TS2451: Cannot redeclare block-scoped variable 'var10'.
letDeclarations-scopes-duplicates.ts(36,11): error TS2451: Cannot redeclare block-scoped variable 'var10'.
letDeclarations-scopes-duplicates.ts(37,11): error TS2451: Cannot redeclare block-scoped variable 'var10'.
letDeclarations-scopes-duplicates.ts(37,11): error TS2451: Cannot redeclare block-scoped variable 'var10'.
letDeclarations-scopes-duplicates.ts(40,9): error TS2451: Cannot redeclare block-scoped variable 'var11'.
letDeclarations-scopes-duplicates.ts(40,9): error TS2451: Cannot redeclare block-scoped variable 'var11'.
letDeclarations-scopes-duplicates.ts(41,9): error TS2451: Cannot redeclare block-scoped variable 'var11'.
letDeclarations-scopes-duplicates.ts(41,9): error TS2451: Cannot redeclare block-scoped variable 'var11'.
letDeclarations-scopes-duplicates.ts(45,9): error TS2451: Cannot redeclare block-scoped variable 'var12'.
letDeclarations-scopes-duplicates.ts(45,9): error TS2451: Cannot redeclare block-scoped variable 'var12'.
letDeclarations-scopes-duplicates.ts(46,9): error TS2451: Cannot redeclare block-scoped variable 'var12'.
letDeclarations-scopes-duplicates.ts(46,9): error TS2451: Cannot redeclare block-scoped variable 'var12'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== letDeclarations-scopes-duplicates.ts (48 errors) ====
    // Errors: redeclaration
    let var1 = 0;
        ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var1'.
        ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var1'.
    let var1 = 0; // error
        ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var1'.
        ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var1'.
    
    let var2 = 0;
        ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var2'.
        ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var2'.
    const var2 = 0;
          ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var2'.
          ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var2'.
    
    const var3 = 0;
          ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var3'.
          ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var3'.
    let var3 = 0;
        ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var3'.
        ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var3'.
    
    const var4 = 0;
          ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var4'.
          ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var4'.
    const var4 = 0;
          ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var4'.
          ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var4'.
    
    var var5 = 0;
        ~~~~
!!! error TS2300: Duplicate identifier 'var5'.
        ~~~~
!!! error TS2300: Duplicate identifier 'var5'.
    let var5 = 0;
        ~~~~
!!! error TS2300: Duplicate identifier 'var5'.
        ~~~~
!!! error TS2300: Duplicate identifier 'var5'.
    
    let var6 = 0;
        ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var6'.
        ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var6'.
    var var6 = 0;
        ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var6'.
        ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var6'.
    
    {
        let var7 = 0;
            ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var7'.
            ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var7'.
        let var7 = 0;
            ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var7'.
            ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var7'.
        {
            let var8 = 0;
                ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var8'.
                ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var8'.
            const var8 = 0;
                  ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var8'.
                  ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var8'.
        }
    }
    
    switch (0) {
        default:
            let var9 = 0;
                ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var9'.
                ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var9'.
            let var9 = 0;
                ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var9'.
                ~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var9'.
    }
    
    try {
        const var10 = 0;
              ~~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var10'.
              ~~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var10'.
        const var10 = 0;
              ~~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var10'.
              ~~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var10'.
    }
    catch (e) {
        let var11 = 0;
            ~~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var11'.
            ~~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var11'.
        let var11 = 0;
            ~~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var11'.
            ~~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var11'.
    }
    
    function F1() {
        let var12;
            ~~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var12'.
            ~~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var12'.
        let var12;
            ~~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var12'.
            ~~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'var12'.
    }
    
    // OK
    var var20 = 0;
    
    var var20 = 0
    {
        let var20 = 0;
        {
            let var20 = 0;
        }
    }
    
    switch (0) {
        default:
            let var20 = 0;
    }
    
    try {
        let var20 = 0;
    }
    catch (e) {
        let var20 = 0;
    }
    
    function F() {
        let var20;
    }
    
    